2004-06-26  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py: dropped New Database message. After all, it should
	be incredibly obvious.
	* src/Utils.py: create_id to generate random internal ID
	* src/RelLib.py: new internal ID support
	* src/AddSpouse.py: bug fixes
	* src/ChooseParents.py: bug fixes
	* src/PeopleModel.py: bug fixes
	* src/PeopleView.py: bug fixes
	* src/FamilyView.py: bug fixes
	* src/Bookmarks.py: support for new internal IDs
	* src/EditPerson.py: support for new internal IDs
	* src/plugins/ReadGedcom.py: handle new internal IDs

2004-06-24  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps_main.py (on_import_activate,on_export_activate):
	Add methods.
	* src/Plugins.py (build_import_menu,build_export_menu): Remove;
	(register_export): Change to the new scheme.
	* src/gramps.glade: Add handlers to Import and Export menus. 
	Rename Export to Save As..., add icons. 

2004-06-23  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/ArgHandler.py (handle_args): Add import callback call.
	* src/gramps_main.py: Use open filters, mime types, and handlers 
	from import plugins. 
	* src/Plugins.py: Change import plugin registration.
	* src/ReadXML.py: Change registration.
	* src/plugins/ReadGedcom.py: Change registration.
	* src/plugins/ReadPkg.py: Rewrite and change registration.

2004-06-22  Don Allingham  <dallingham@users.sourceforge.net>
	* src/EditPerson,py: allow reordering of event columns
	* src/TransTable.py: allow to be initialized with a list instead of a map
	* src/gramps.glade: allow reordering of event columns
	* src/gramps_main.py: catch program_init exception
	* src/ListModel.py: allow reordering of columns

2004-06-22  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/ArgHandler.py (parse_args): Switch from 'tgz' to 'gpkg'
	for Gramps package; (handle_args): Use separate dir for all 
	import-produced files; (cl_export): Convert media objects export
	to the database interface. 